<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/onboardBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="270dp"
        android:src="@drawable/onboard_background"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/onboardImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/onboard_image"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/onboardBack"/>

    <ImageView
        android:id="@+id/onboardSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:src="@drawable/onboard_slider_2"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/onboardImg"
        app:layout_constraintBottom_toBottomOf="@+id/onboardBack"/>

    <TextView
        android:id="@+id/onboardHeader"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/heading_one"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/main_gray_text_tranc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardSlider"/>

    <TextView
        android:id="@+id/onboardDesc"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/desc_two"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/main_gray_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardHeader"/>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/purple_btn_background"
        android:text="@string/next_btn"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/onboardDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/skipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/skip_btn"
        android:textAllCaps="false"
        android:textColor="@color/main_gray_text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/nextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>