<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/animation_back"
    tools:context=".GameEndAnimationFragment">

    <TextView
        android:id="@+id/wellDoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/well_done"
        android:textColor="@color/main_yellow"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/learnedTextView"
        android:layout_width="135dp"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:background="@drawable/scores_back"
        app:layout_constraintEnd_toStartOf="@id/scoresTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wellDoneTextView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learned"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="@color/main_black_text"
            android:background="@drawable/scores_text_back"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="10/10"
            android:textSize="22sp"
            android:textStyle="italic"
            android:textColor="@color/main_black_text"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoresTextView"
        android:layout_width="135dp"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:background="@drawable/scores_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/learnedTextView"
        app:layout_constraintTop_toBottomOf="@id/wellDoneTextView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="@color/main_black_text"
            android:background="@drawable/scores_text_back"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="100%"
            android:textSize="22sp"
            android:textStyle="italic"
            android:textColor="@color/main_black_text"
            android:textAlignment="center"/>

    </LinearLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieEndAnim"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_fileName="end_animation.json" />

    <Button
        android:id="@+id/finishBtn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="35dp"
        android:background="@drawable/purple_btn_background"
        android:text="@string/close_btn"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieEndAnim" />

</androidx.constraintlayout.widget.ConstraintLayout>