<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_gray_progress"
    tools:context=".AbcCheckYourselfFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/content_purple_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#00000000"
                android:src="@drawable/back_btn" />

            <ProgressBar
                android:id="@+id/progressBarHorizontal"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:indeterminateOnly="false"
                android:max="42"
                android:progress="15"
                android:progressDrawable="@drawable/progress_bar_horizontal" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/desc_check_image"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/gestureImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/gesture_image" />


    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginHorizontal="20dp"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintBottom_toTopOf="@+id/nextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/buttonOption1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="А"
            android:backgroundTint="@color/white"
            android:textColor="@color/main_gray_text_tranc"
            android:textSize="18sp"
            android:textStyle="italic"
            android:gravity="center"/>

        <Button
            android:id="@+id/buttonOption2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="Ә"
            android:backgroundTint="@color/white"
            android:textColor="@color/main_gray_text_tranc"
            android:textSize="18sp"
            android:textStyle="italic"
            android:gravity="center" />

        <Button
            android:id="@+id/buttonOption3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="Б"
            android:backgroundTint="@color/white"
            android:textColor="@color/main_gray_text_tranc"
            android:textSize="18sp"
            android:textStyle="italic"
            android:gravity="center" />

        <Button
            android:id="@+id/buttonOption4"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="В"
            android:backgroundTint="@color/white"
            android:textColor="@color/main_gray_text_tranc"
            android:textSize="18sp"
            android:textStyle="italic"
            android:gravity="center" />

        <Button
            android:id="@+id/buttonOption5"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="Г"
            android:backgroundTint="@color/white"
            android:textColor="@color/main_gray_text_tranc"
            android:textSize="18sp"
            android:textStyle="italic"
            android:gravity="center" />

        <Button
            android:id="@+id/buttonOption6"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="Ғ"
            android:backgroundTint="@color/white"
            android:textColor="@color/main_gray_text_tranc"
            android:textSize="18sp"
            android:textStyle="italic"
            android:gravity="center" />

    </GridLayout>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="35dp"
        android:background="@drawable/purple_btn_background"
        android:text="@string/next_btn"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/skipBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/skipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="#00000000"
        android:text="@string/skip_btn"
        android:textAllCaps="false"
        android:textColor="@color/main_gray_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>